AC_PREREQ(2.5)
AC_INIT(libnss_tld_mapper, [0.1.1], [lance.m.cooper@gmail.com])
AC_CONFIG_SRCDIR([src/libnss_tld_mapper.c])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER([config.h])
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_ENABLE_SHARED
AC_DISABLE_STATIC
AM_PROG_LIBTOOL
AC_HEADER_STDC
AC_C_CONST
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
